# notas-musicais

./: mkdocs.yml  pyproject.toml
docs/: index.md
notas_musicais/: acordes.py  campo_harmonico.py  cli.py  escalas.py
tests/: test_acordes.py  test_cli.py  test_escalas.py
